# codex-africanus

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  AUTHORS.rst  CITATION.cff  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.rst  pyproject.toml  requirements.readthedocs.txt  requirements_dev.txt  ruff.toml  setup.cfg  setup.py  small_ms_test_case.py  small_ms_test_case_baseline.py  test_mapping2.py  test_time_and_channel_averaging2.py  tox.ini
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  pre-commit.yml  readthedocs.yml
.travis/: pep8.docker  python2.docker  python35-all.docker  python35.docker  python36-all.docker  python36-base.docker  python36.docker  python37-all.docker  python37-base.docker
africanus/: __init__.py  compatibility.py  config.py  conftest.py
africanus/averaging/: __init__.py  avg_factory.py  baseline_time_and_channel_avg.py  baseline_time_and_channel_mapping.py  bda_avg.py  bda_mapping.py  bda_support.py  bda_time_mapping.py  channel_mapping.py  dask.py  new_averager.py  new_averager_mapping.py  row_averager.py  row_iterator.py  row_mapping.py  shared.py  splines.py  support.py  time_and_channel_avg.py  time_and_channel_mapping.py  time_avg_factory.py
africanus/averaging/tests/: ms_manipulator.py  test_averaging_factory.py  test_baseline_mapping-Copy1.py  test_baseline_mapping-MS.py  test_baseline_mapping.py  test_baseline_time_and_channel-MS.py  test_baseline_time_and_channel.py  test_bda_averaging.py  test_bda_mapping.py  test_bda_support.py  test_bda_time_averaging.py  test_mapping.py  test_new_averager.py  test_row_averager.py  test_splines.py  test_support.py  test_time_and_channel_averaging.py
africanus/calibration/: __init__.py  dask.py  phase_only.py  scalar_phase_only.py  utils.py
africanus/calibration/examples/: phase_only_scalar_calibration.py
africanus/calibration/phase_only/: __init__.py  dask.py  phase_only.py
africanus/calibration/tests/: conftest.py  test_phase_only.py  test_utils.py
africanus/calibration/utils/: __init__.py  compute_and_corrupt_vis.py  correct_vis.py  corrupt_vis.py  dask.py  residual_vis.py  utils.py
africanus/constants/: __init__.py  consts.py
africanus/coordinates/: __init__.py  coordinates.py  dask.py
africanus/coordinates/tests/: test_coordinates.py
africanus/ddes/: __init__.py  dask.py  transform.py
africanus/deconv/hogbom/: __init__.py  clean.py
africanus/dft/: __init__.py  dask.py  direct_fourier_transform.py  kernels.py
africanus/dft/examples/: predict_from_fits.py
africanus/dft/tests/: test_dft.py
africanus/filters/: __init__.py  conv_filters.py  filter_tapers.py  kaiser_bessel_filter.py  plot_filter.py  plot_taper.py
africanus/filters/tests/: test_filter_taper.py  test_kaiser_bessel_filter.py  test_oversampling.py
africanus/filters/wproj/: spheroidal.py
africanus/gps/: __init__.py  draw_samples.py  kernels.py  utils.py
africanus/gps/examples/: generate_phase_only_gains.py  grid_interp.py
africanus/gridding/: util.py  utils.py
africanus/gridding/facet/: grid.py  gridding.py  spheroidal.py  support.py
africanus/gridding/nifty/: dask.py
africanus/gridding/oned/: gridding.py
africanus/gridding/perleypolyhedron/: dask.py  degridder.py  gridder.py  kernels.py
africanus/gridding/simple/: __init__.py  dask.py  gridding.py
africanus/gridding/wgridder/: __init__.py  dask.py  hessian.py  im2residim.py  im2vis.py  vis2im.py
africanus/install/: __init__.py  requirements.py
africanus/io/ms/: creation.py
africanus/linalg/: __init__.py  geometry.py  kronecker_tools.py  pcg.py
africanus/model/: __init__.py  dask.py  spec_model.py
africanus/opts/: __init__.py  data_reader.py  pd_dask.py  primaldual.py  sub_opts.py  test_opts.py  test_opts_dask.py
africanus/reduction/: psf_redux.py  temp_plot.py  temp_test_diagonal.py  temp_test_padding.py
africanus/rime/: __init__.py  beam_cubes.py  bright.py  dask.py  dask_predict.py  fast_beam_cubes.py  feeds.py  multiplexing.py  parangles.py  parangles_astropy.py  parangles_casa.py  phase.py  predict.py  predict2.py  shapelet_dde.py  shapelets.py  transform.py  wsclean_predict.py  zernicke.py  zernike.py
africanus/stokes/: __init__.py  brightness.py  dask.py  stokes_conversion.py  transformation_defs.py
africanus/testing/: beam_factory.py
africanus/util/: __init__.py  appdirs.py  beams.py  casa_types.py  cmdline.py  code.py  cub.py  cuda.py  cupy.py  dask.py  dask_util.py  docs.py  files.py  fits_axes.py  hashing.py  jax_init.py  jinja2.py  numba.py  nvcc.py  patterns.py  requirements.py  rtd.py  shapes.py  testing.py  trove.py  type_inference.py
docs/: Makefile  api.rst  averaging-api.rst  calibration-api.rst  cmdline-utils.rst  conf.py  conv-filter-api.rst  coordinates-api.rst  deconv-api.rst  dft-api.rst  experimental.rst  gps-api.rst  gridding-api.rst  index.rst  installation.rst  linalg-api.rst  make.bat  model-api.rst  requirements.txt  rime-api.rst  stokes-api.rst  usage.rst  util-api.rst
essays/: test_monolithic.py  test_monolithic2.py  test_monolothic.py
tests/: test_africanus.py  test_beam_utils.py  test_beams.py  test_coordinates.py  test_dft.py  test_fits_axes.py  test_opts.py  test_reduction.py  test_rime.py  test_shapelets.py  test_simple_gridder.py  test_stokes.py  test_util_shape.py  test_w_projection.py  test_wstack_gridder.py  test_zernicke.py  test_zernike.py
(+243 files in other folders)
